<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tran Tracker</string>
    <string name="v1">Shuttle 1</string>
    <string name="v2">Shuttle 2</string>
    <string name="v3">Shuttle 3</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="vehicleSelectText">Please select your current vehicle:</string>
    <string name="buttonText">Start Tracking!</string>
    <string name="enterName">Or Enter ID and Name:</string>
    <string name="nameField">Enter name here</string>
    <string name="nameButton">Track with Name</string>
</resources>
